@@ -38,6 +38,8 @@ Version 1.8.3
        should highlight whole word only. (Sup Yut Sum)
 - BUG: Issue #577: TortoiseMerge: LocationBar highlights
        should respect all options in FindDlg. (Sup Yut Sum)
+- BUG: Issue #578: resolving types of conflicts
+       individually. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
